feat: user service, auth middleware
